# marketplace

./: LICENSE.md  README.md
.github/workflows/: build-luxfilter.yml  build-modules.yml  release-artifacts.yml
.tools/luxmktplacemgr/: README.md  pyproject.toml
.tools/luxmktplacemgr/src/buildmgr/: main.py
.tools/luxmktplacemgr/src/luxmktplacemgr/: main.py
.tools/luxmktplacemgr/src/uploadmgr/: main.py
Luxoria.App/: ._Luxoria.App.sln  Luxoria.App.sln
Luxoria.App/Luxoria.App/: App.xaml.cs  Luxoria.App.csproj  MainWindow.xaml  MainWindow.xaml.cs  SplashScreen.xaml  SplashScreen.xaml.cs
Luxoria.App/Luxoria.Core/: IMarketplaceService.cs  Luxoria.Core.csproj
Luxoria.App/Luxoria.Core.Tests/: Luxoria.Core.Tests.csproj  ModuleServiceTests.cs  StartupTests.cs
Luxoria.App/Luxoria.GModules/: LuxMenuBarItem.cs  Luxoria.GModules.csproj  SmartButton.cs  SmartButtonType.cs
Luxoria.App/Luxoria.Modules/: EventBus.cs  Luxoria.Modules.csproj  ModuleContext.cs  ModuleLoader.cs  VaultService.cs
Luxoria.App/Luxoria.Modules.Tests/: BusTests.cs  FileExtensionHelperTests.cs  ImageDataTests.cs  ImageUpdateEventTests.cs  Luxoria.Modules.Tests.csproj  ManifestTests.cs  ModuleContextTests.cs  ModuleLoaderTests.cs  OpenCollectionEventTests.cs  TextInputEventTests.cs
Luxoria.App/Luxoria.SDK/: Luxoria.SDK.csproj
Luxoria.App/Luxoria.SDK.Tests/: LoggerServiceTests.cs  Luxoria.SDK.Tests.csproj
Modules/: ._GraphicalTestModule
Modules/GraphicalTestModule/: GraphicalTestModule.sln  buildsystem.py
Modules/LuxEditor/: LuxEditor.sln  README.md  buildsystem.py  luxmod.json
(+330 files in other folders)
